--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?80">
+	<link rel="stylesheet" type="text/css" href="./all.css?1626">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -230,7 +230,7 @@ $(function(){
 						</div>
 					</div>
 				</div>
-				<h5 class="tc-onyx mg-lg mg-clear-sm text-center h5-style ">
+				<h5 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 						kcp implements fully-isolated workspaces, each acting as its own Kubernetes-like cluster, with its own URL, its own set of APIs (e.g. different CRDs), its own RBAC, but as cheap and quick as a namespace
 					</h5>
 			</div>
@@ -357,7 +357,21 @@ $(function(){
 					<span class="fa fa-heart none icon-red icon-xl"></span>
 				</div>
 				<h5 class="text-center mg-md">
-					We develop kcp completely in the open. Everybody is welcome to help making the vision of kcp reality. <br><br>Talk to us in person in the <a class="ltc-azure" href="https://kubernetes.slack.com/archives/C021U8WSAFK">#kcp-dev</a> channel in Kubernetes Slack. Find our&nbsp;<a class="ltc-azure" href="https://github.com/kcp-dev/kcp">code at Github</a>.<br>
+					We develop kcp completely in the open. Everybody is welcome to help making the vision of kcp reality. <br>
+				</h5>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- contribute END -->
+
+<!-- contribute -->
+<div class="bloc" id="contribute">
+	<div class="container bloc-lg-md bloc-md bloc-lg-sm bloc-md-lg">
+		<div class="row">
+			<div class="text-center text-lg-center text-md-center col-lg-8 offset-lg-2 col-md-10 offset-md-1">
+				<h5 class="text-center mg-md tc-onyx-2 kcp-contribute-text ">
+					Meet us in person in the <a class="ltc-azure" href="https://kubernetes.slack.com/archives/C021U8WSAFK">#kcp-dev</a> channel in Kubernetes Slack. Find our&nbsp;<a class="ltc-azure" href="https://github.com/kcp-dev/kcp">code at Github</a>.
 				</h5>
 				<div >
 					<a href="https://github.com/kcp-dev/kcp/graphs/contributors">
@@ -365,8 +379,8 @@ $(function(){
 </a>
 					
 				</div>
-				<h5 class="text-center mg-md">
-						<br />We have a weekly <span class="kcp-community-meeting">community meeting: every Tuesday 11am EST</span>. Join us live! The <a class="ltc-azure" href="https://github.com/kcp-dev/kcp/issues?q=is%3Aopen+is%3Aissue+label%3Acommunity-meeting">agenda is available as Github issue</a> shortly before the meeting. See the <a class="ltc-azure" href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q">recordings on Youtube</a>.
+				<h5 class="text-center mg-md tc-onyx-2 kcp-contribute-text-bottom">
+						We have a weekly <span class="kcp-community-meeting">community meeting: every Tuesday 11am EST</span>. Join us live! The <a class="ltc-azure" href="https://github.com/kcp-dev/kcp/issues?q=is%3Aopen+is%3Aissue+label%3Acommunity-meeting">agenda is available as Github issue</a> shortly before the meeting. See the <a class="ltc-azure" href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q">recordings on Youtube</a>.
 					</h5>
 			</div>
 		</div>
@@ -379,41 +393,52 @@ $(function(){
 <!-- ScrollToTop Button END-->
 
 
-<!-- community -->
-<div class="bloc tc-onyx-2 l-bloc" id="community">
-	<div class="container bloc-md-md bloc-md-sm bloc-md bloc-md-lg">
-		<div class="row g-0 voffset-clear-md">
-			<div class="col-12">
-				<h2 class="text-center mg-clear mg-md-xs mg-md-sm mg-clear-md">
-					Follow us, discuss &amp; learn about kcp.
-				</h2>
-			</div>
-		</div>
-		<div class="row g-0 voffset voffset-md">
-			<div class="freedom-social col-md-12 col-lg-12">
-				<a href="https://twitter.com/kcp"><span class="none icon-lg github-social-logo fab fa-twitter icon-padding-top"></span></a><a href="github.com/kcp-dev/kcp"><span class="none icon-lg github-social-logo icon-margin-right fab fa-github"></span></a><a href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q"><span class="none icon-lg github-social-logo fab fa-youtube icon-white-icons-margin-right"></span></a><a href="https://groups.google.com/g/kcp-users"><span class="none icon-lg github-social-logo fa fa-mail-bulk icon-margin-left"></span></a>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- community END -->
-
-<!-- footer -->
-<div class="bloc tc-white bgc-true-blue" id="footer">
-	<div class="container bloc-md">
+<!-- bloc-7 -->
+<div class="bloc bgc-black-2 d-bloc" id="bloc-7">
+	<div class="container bloc-lg">
 		<div class="row">
-			<div class="col text-center text-md-start">
-				<p class="text-center mg-clear">
-					Copyright © 2022 &nbsp;<a class="ltc-white" href="https://github.com/kcp-dev/kcp" target="_blank">The KCP Authors</a>
+			<div class="col-md-3 col-sm-6 offset-lg-2 col-lg-4">
+				<h4 class="mg-md text-center tc-white-2 text-sm-start">
+					About
+				</h4>
+				<p class="text-center mg-clear text-lg-start">
+					Copyright © 2022 &nbsp;<br><a class="ltc-white" href="https://github.com/kcp-dev/kcp" target="_blank">The KCP Authors</a>
 				</p>
+			</div>
+			<div class="col-md-3 col-sm-6 col-lg-4">
 				<div><div id="page-transition-anim" class="page-transition page-trans-up" style="background-color: rgb(0, 0, 0); animation-duration: 1s; animation-delay: 0.5s;">
 </div>
 				</div>
+				<h4 class="mg-md text-center tc-white-2 text-sm-start">
+						Connect
+					</h4>
+				<div class="row">
+						<div class="col-6 col-sm-2 col offset-sm-0">
+							<div class="text-center">
+								<a href="github.com/kcp-dev/kcp"><span class="icon-md fab fa-github"></span></a>
+							</div>
+						</div>
+						<div class="col-6 col-sm-2">
+							<div class="text-center">
+								<a href="https://twitter.com/kcp"><span class="fab fa-twitter icon-md"></span></a>
+							</div>
+						</div>
+						<div class="col-6 col-sm-2">
+							<div class="text-center">
+								<a href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q"><span class="icon-md fab fa-youtube"></span></a>
+							</div>
+						</div>
+						<div class="col-6 col-sm-2">
+							<div class="text-center">
+								<a href="https://groups.google.com/g/kcp-users"><span class="icon-md fa fa-mail-bulk"></span></a>
+							</div>
+						</div>
+					</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- footer END -->
+<!-- bloc-7 END -->
 
 </div>
 <!-- Main container END -->
@@ -421,7 +446,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?8368"></script><!-- Additional JS END -->
+<script src="./js/all.js?1922"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
