--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?1626">
+	<link rel="stylesheet" type="text/css" href="./all.css?7630">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -324,7 +324,7 @@ $(function(){
 		<div class="row">
 					<div class="col freedom-time-cotent scroll-fx-in-fade order-2 order-sm-0">
 						<img src="img/notebook.png" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
-						<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
+						<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style h5-style-last">
 							kcp intentionally only knows generic APIs, no pods or related resources. Transparent-multi-cluster is a kcp sub-project to re-add many of Kube&rsquo;s workload APIs, but reshaped to offer shared compute capacity making users forget about clusters and nodes.
 						</h4>
 					</div>
@@ -345,32 +345,36 @@ $(function(){
 </div>
 <!-- timeline END -->
 
-<!-- contribute -->
-<div class="bloc bgc-onyx d-bloc" id="contribute">
+<!-- collaboration -->
+<div class="bloc bgc-true-blue" id="collaboration">
 	<div class="container bloc-lg-md bloc-md bloc-lg-sm bloc-md-lg">
 		<div class="row">
-			<div class="text-center text-lg-center text-md-center col-lg-8 offset-lg-2 col-md-10 offset-md-1">
-				<h2 class="text-center tc-white mg-md">
-					We love collaboration&nbsp;
-				</h2>
-				<div class="text-center">
-					<span class="fa fa-heart none icon-red icon-xl"></span>
-				</div>
-				<h5 class="text-center mg-md">
-					We develop kcp completely in the open. Everybody is welcome to help making the vision of kcp reality. <br>
-				</h5>
+			<div class="col-12">
 			</div>
 		</div>
 	</div>
 </div>
-<!-- contribute END -->
+<!-- collaboration END -->
 
 <!-- contribute -->
 <div class="bloc" id="contribute">
 	<div class="container bloc-lg-md bloc-md bloc-lg-sm bloc-md-lg">
 		<div class="row">
 			<div class="text-center text-lg-center text-md-center col-lg-8 offset-lg-2 col-md-10 offset-md-1">
-				<h5 class="text-center mg-md tc-onyx-2 kcp-contribute-text ">
+				<h2 class="text-center mg-md tc-onyx">
+					We love collaboration&nbsp;
+				</h2>
+				<div class="text-center">
+					<span class="fa fa-heart none icon-red icon-xl icon-margin-bottom "></span>
+				</div>
+				<h5 class="text-center mg-md tc-onyx-2">
+					We develop kcp completely in the open. Everybody is welcome to help making the vision of kcp reality.
+				</h5>
+			</div>
+		</div>
+		<div class="row">
+			<div class="text-center text-lg-center text-md-center col-lg-8 offset-lg-2 col-md-10 offset-md-1">
+				<h5 class="text-center mg-md tc-onyx-2 kcp-contribute-text">
 					Meet us in person in the <a class="ltc-azure" href="https://kubernetes.slack.com/archives/C021U8WSAFK">#kcp-dev</a> channel in Kubernetes Slack. Find our&nbsp;<a class="ltc-azure" href="https://github.com/kcp-dev/kcp">code at Github</a>.
 				</h5>
 				<div >
@@ -446,7 +450,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?1922"></script><!-- Additional JS END -->
+<script src="./js/all.js?597"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
