--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?7630">
+	<link rel="stylesheet" type="text/css" href="./all.css?6249">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -283,7 +283,7 @@ $(function(){
 			</div>
 		<div class="row">
 					<div class="col freedom-time-cotent scroll-fx-in-fade order-2 order-sm-0">
-						<img src="img/notebook.png" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
+						<img src="img/kcp-kube-love.svg" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
 						<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 							kcp does not replace Kubernetes, but complements it.<br><br>As a global control plane to inter-connect Kubernetes clusters.<br> <br>As a backend to host Kubernetes APIs as SaaS to any Kubernetes on any platform and any cloud provider, natively.<br><br>
 						</h4>
@@ -315,7 +315,7 @@ $(function(){
 						</div>
 					</div>
 					<div class="col freedom-time-cotent scroll-fx-in-fade">
-						<img src="img/notebook.png" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
+						<img src="img/horizontally%20scalable.svg" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
 						<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 							kcp schedules workspaces to shared apiservers (the shards), similarly to pods scheduled to nodes and containers on a node sharing a Linux kernel. Our ambitions are to eventually reach 1 million workspaces and 10,000 shards.<br>
 						</h4>
@@ -323,7 +323,7 @@ $(function(){
 				</div>
 		<div class="row">
 					<div class="col freedom-time-cotent scroll-fx-in-fade order-2 order-sm-0">
-						<img src="img/notebook.png" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
+						<img src="img/workloads.svg" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
 						<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style h5-style-last">
 							kcp intentionally only knows generic APIs, no pods or related resources. Transparent-multi-cluster is a kcp sub-project to re-add many of Kube&rsquo;s workload APIs, but reshaped to offer shared compute capacity making users forget about clusters and nodes.
 						</h4>
@@ -365,7 +365,7 @@ $(function(){
 					We love collaboration&nbsp;
 				</h2>
 				<div class="text-center">
-					<span class="fa fa-heart none icon-red icon-xl icon-margin-bottom "></span>
+					<span class="fa fa-heart none icon-red icon-xl"></span>
 				</div>
 				<h5 class="text-center mg-md tc-onyx-2">
 					We develop kcp completely in the open. Everybody is welcome to help making the vision of kcp reality.
@@ -401,42 +401,23 @@ $(function(){
 <div class="bloc bgc-black-2 d-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
-			<div class="col-md-3 col-sm-6 offset-lg-2 col-lg-4">
-				<h4 class="mg-md text-center tc-white-2 text-sm-start">
+			<div class="col-md-3 col-sm-6 offset-lg-2 col-lg-4 text-lg-start">
+				<h4 class="mg-md text-center tc-white-2 text-sm-start text-lg-center">
 					About
 				</h4>
-				<p class="text-center mg-clear text-lg-start">
-					Copyright © 2022 &nbsp;<br><a class="ltc-white" href="https://github.com/kcp-dev/kcp" target="_blank">The KCP Authors</a>
+				<p class="text-center mg-clear text-lg-center">
+					Copyright © 2022 <a class="ltc-white" href="https://github.com/kcp-dev/kcp" target="_blank">The KCP Authors</a>
 				</p>
 			</div>
-			<div class="col-md-3 col-sm-6 col-lg-4">
+			<div class="col-md-3 col-sm-6 col-lg-4 text-lg-start">
 				<div><div id="page-transition-anim" class="page-transition page-trans-up" style="background-color: rgb(0, 0, 0); animation-duration: 1s; animation-delay: 0.5s;">
 </div>
 				</div>
-				<h4 class="mg-md text-center tc-white-2 text-sm-start">
+				<h4 class="mg-md text-center tc-white-2 text-sm-start text-lg-center">
 						Connect
 					</h4>
-				<div class="row">
-						<div class="col-6 col-sm-2 col offset-sm-0">
-							<div class="text-center">
-								<a href="github.com/kcp-dev/kcp"><span class="icon-md fab fa-github"></span></a>
-							</div>
-						</div>
-						<div class="col-6 col-sm-2">
-							<div class="text-center">
-								<a href="https://twitter.com/kcp"><span class="fab fa-twitter icon-md"></span></a>
-							</div>
-						</div>
-						<div class="col-6 col-sm-2">
-							<div class="text-center">
-								<a href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q"><span class="icon-md fab fa-youtube"></span></a>
-							</div>
-						</div>
-						<div class="col-6 col-sm-2">
-							<div class="text-center">
-								<a href="https://groups.google.com/g/kcp-users"><span class="icon-md fa fa-mail-bulk"></span></a>
-							</div>
-						</div>
+				<div class="text-lg-center">
+						<a href="github.com/kcp-dev/kcp"><span class="fab fa-github float-lg-none icon-lg kcp-connect-icon "></span></a><a href="https://twitter.com/kcp"><span class="fab fa-twitter icon-lg kcp-connect-icon"></span></a><a href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q"><span class="fab fa-youtube icon-lg kcp-connect-icon"></span></a><a href="https://groups.google.com/g/kcp-users"><span class="fa fa-mail-bulk icon-lg kcp-connect-icon"></span></a>
 					</div>
 			</div>
 		</div>
@@ -450,7 +431,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?597"></script><!-- Additional JS END -->
+<script src="./js/all.js?4913"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
