--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?8762">
+	<link rel="stylesheet" type="text/css" href="./all.css?3758">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -119,8 +119,8 @@ $(function(){
 <!-- header-logos END -->
 
 <!-- hero -->
-<div class="bloc tc-onyx b-parallax l-bloc" id="hero">
-	<div class="parallax bg-ISS-46-Glittering-lights-of-the-American-Midwest-iss bgc-white-smoke">
+<div class="bloc tc-onyx b-parallax d-bloc" id="hero">
+	<div class="parallax bg-earth-1600 bgc-white-smoke">
 	</div>
 	<div class="container -sm bloc-md-sm -md">
 		<div class="row row-margin-bottom">
@@ -141,13 +141,13 @@ $(function(){
 		<div class="row">
 			<div class="col">
 				<h2 class="mg-md text-lg-center h2-style tc-onyx btn-resize-mode float-md-none text-md-center text-sm-center">
-					An OpenSource horizontally scalable Kubernetes-like Control Plane.
+					An OpenSource horizontally scalable Control Plane for Kubernetes APIs.
 				</h2>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-4 text-center">
-				<span class="fa fa-star icon-md icon-round kcp-star-icon "></span>
+				<img src="img/top-icon-1.png" class="img-fluid mx-auto img-top-icon-style" alt="top icon-1" /><span class="fa fa-star icon-round icon-md kcp-feature-icon "></span>
 				<h3 class="mg-md tc-outer-space h3-style">
 					<strong>Isolation through Workspaces</strong>
 				</h3>
@@ -156,7 +156,7 @@ $(function(){
 				</p>
 			</div>
 			<div class="col-md-4 text-center bloc-margin-top">
-				<span class="fa fa-star icon-round icon-md kcp-star-icon "></span>
+				<img src="img/top-icon-2.png" class="img-fluid mx-auto img-top-icon-style" alt="top icon-2" /><span class="fa fa-star icon-round icon-md kcp-feature-icon "></span>
 				<h3 class="mg-md tc-outer-space h3-style">
 					<strong>Massively multi-tenant API services</strong>
 				</h3>
@@ -165,7 +165,7 @@ $(function(){
 				</p>
 			</div>
 			<div class="col-md-4 text-center">
-				<span class="fa fa-star icon-round icon-md kcp-star-icon "></span>
+				<img src="img/top-icon-3.png" class="img-fluid mx-auto img-top-icon-style" alt="top icon-3" /><span class="fa fa-star icon-round icon-md kcp-feature-icon "></span>
 				<h3 class="mg-md tc-outer-space h3-style">
 					<strong>SaaS-like API Consumption</strong>
 				</h3>
@@ -213,14 +213,14 @@ $(function(){
 			</div>
 			<div class="col freedom-time-cotent scroll-fx-in-fade">
 				<img src="img/Kubernetes_logo_without_workmark.svg" class="img-fluid mx-auto d-block mg-md img-timeline-style" alt="coffee%20banner" />
-				<h5 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
-					kcp takes full advantage of Kubernetes-style APIs, the glue that binds the cloud-native technology ecosystem together and imbues Kubernetes popular end-user experience, but kcp has unbound it from Kubernetes workload orchestration and clusters.<br><br>One rule that is set in stone:<br><br>kcp exposes 100% pure Kubernetes APIs by using the latest Kubernetes releases as the basis.<br><br>We live and breath Kubernetes and the community. No compromises.<br>
+				<h5 class="tc-onyx mg-lg mg-clear-sm text-center h5-style ">
+					kcp takes full advantage of Kubernetes API conventions, the glue that binds the cloud-native technology ecosystem together and imbues Kubernetes popular end-user experience, but kcp has unbound it from Kubernetes workload orchestration and clusters.<br><br>One rule that is set in stone:<br><br>kcp exposes 100% pure Kubernetes APIs by using the latest Kubernetes releases as the basis.<br><br>We live and breath Kubernetes and the community. No compromises.<br>
 				</h5>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col freedom-time-cotent scroll-fx-in-fade order-2 order-sm-0">
-				<img src="img/notebook.png" class="img-fluid mx-auto d-block mg-md " alt="coffee%20banner" />
+				<img src="img/multitenancy.png" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
 				<h5 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 					kcp implements fully-isolated workspaces, each acting as its own Kubernetes-like cluster, with its own URL, its own set of APIs (e.g. different CRDs), its own RBAC, but as cheap and quick as a namespace
 				</h5>
@@ -262,10 +262,8 @@ $(function(){
 					</div>
 			</div>
 			<div class="col freedom-time-cotent scroll-fx-in-fade">
-					<div class="kcp-asciicinema-div text-lg-start">
-						<div class="text-center kcp-play-button">
-							<a href="#" data-bs-toggle="modal" data-bs-target="#asciinema-apis-as-a-service"><span class="icon-white-smoke fa fa-play-circle icon-xl"></span></a>
-						</div><a href="#" data-bs-toggle="modal" data-bs-target="#asciinema-apis-as-a-service" id="asciinemo-apis-as-a-service"><img src="img/notebook.png" class="img-fluid mx-auto d-block mg-md" alt="notebook" /></a>
+					<div class="text-lg-start">
+						<a href="#" data-bs-toggle="modal" data-bs-target="#asciinema-apis-as-a-service" id="asciinemo-apis-as-a-service"><img src="img/apiservice.png" class="img-fluid mx-auto d-block mg-md" alt="notebook" /></a>
 					</div>
 					<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 						kcp extends Kube&rsquo;s CRD extension model to an API export mechanism optimized for SaaS service providers offering APIs to thousands or many tens of thousands of user workspaces. Securely and efficiently.
@@ -314,7 +312,7 @@ $(function(){
 			</div>
 		<div class="row">
 				<div class="col freedom-time-cotent scroll-fx-in-fade order-2 order-sm-0">
-					<img src="img/workloads.svg" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
+					<img src="img/compute.png" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
 					<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style h5-style-last">
 						kcp intentionally only knows generic APIs, no pods or related resources. Transparent-multi-cluster is a kcp sub-project to re-add many of Kube&rsquo;s workload APIs, but reshaped to offer shared compute capacity making users forget about clusters and nodes.
 					</h4>
@@ -442,7 +440,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?9044"></script><!-- Additional JS END -->
+<script src="./js/all.js?7519"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
