--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?3758">
+	<link rel="stylesheet" type="text/css" href="./all.css?4406">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -213,7 +213,7 @@ $(function(){
 			</div>
 			<div class="col freedom-time-cotent scroll-fx-in-fade">
 				<img src="img/Kubernetes_logo_without_workmark.svg" class="img-fluid mx-auto d-block mg-md img-timeline-style" alt="coffee%20banner" />
-				<h5 class="tc-onyx mg-lg mg-clear-sm text-center h5-style ">
+				<h5 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 					kcp takes full advantage of Kubernetes API conventions, the glue that binds the cloud-native technology ecosystem together and imbues Kubernetes popular end-user experience, but kcp has unbound it from Kubernetes workload orchestration and clusters.<br><br>One rule that is set in stone:<br><br>kcp exposes 100% pure Kubernetes APIs by using the latest Kubernetes releases as the basis.<br><br>We live and breath Kubernetes and the community. No compromises.<br>
 				</h5>
 			</div>
@@ -397,6 +397,9 @@ $(function(){
 				<p class="text-center mg-clear text-lg-center">
 					Copyright © 2022 <a class="ltc-white" href="https://github.com/kcp-dev/kcp" target="_blank">The KCP Authors</a>
 				</p>
+				<p class="p-padding-top text-lg-center ">
+					<a class="ltc-white-2" href="https://kubernetes.io">Kubernetes</a> and the Kubernetes logo are registered trademarks of The Linux Foundation.
+				</p>
 			</div>
 			<div class="col-md-3 col-sm-6 col-lg-4 text-lg-start">
 				<div><div id="page-transition-anim" class="page-transition page-trans-up" style="background-color: rgb(0, 0, 0); animation-duration: 1s; animation-delay: 0.5s;">
@@ -440,7 +443,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?7519"></script><!-- Additional JS END -->
+<script src="./js/all.js?7673"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
