frontpage: point doc link to /kcp/main

--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?4406">
+	<link rel="stylesheet" type="text/css" href="./all.css?9470">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -85,7 +85,7 @@ $(function(){
 						<div class="collapse navbar-collapse navbar-45418  fullscreen-nav open-down">
 							<ul class="site-navigation nav navbar-nav ms-auto">
 								<li class="nav-item kcp-navbar-menu">
-									<a href="/docs" class="nav-link float-lg-end">Documentation</a>
+									<a href="/kcp/main" class="nav-link float-lg-end">Documentation</a>
 								</li>
 								<li class="nav-item kcp-navbar-menu">
 									<a href="/blog" class="nav-link">Blog</a>
@@ -124,7 +124,7 @@ $(function(){
 	</div>
 	<div class="container -sm bloc-md-sm -md">
 		<div class="row row-margin-bottom">
-			<div class="text-center text-lg-center text-md-center col-md-10 offset-md-1 offset-lg-0 col-lg-12">
+			<div class="text-center text-lg-center text-md-center col-md-10 offset-md-1 offset-lg-0 col-lg-12 ">
 				<img src="img/blue-green-glow.png" class="img-fluid mx-auto d-block img-style" alt="blue green" />
 				<h1 class="mg-md text-center btn-resize-mode h1-style tc-white">
 					<strong>kcp</strong> –&nbsp;Simplifying building massively multi-tenant services. Together.
@@ -397,7 +397,7 @@ $(function(){
 				<p class="text-center mg-clear text-lg-center">
 					Copyright © 2022 <a class="ltc-white" href="https://github.com/kcp-dev/kcp" target="_blank">The KCP Authors</a>
 				</p>
-				<p class="p-padding-top text-lg-center ">
+				<p class="p-padding-top text-lg-center">
 					<a class="ltc-white-2" href="https://kubernetes.io">Kubernetes</a> and the Kubernetes logo are registered trademarks of The Linux Foundation.
 				</p>
 			</div>
@@ -443,7 +443,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?7673"></script><!-- Additional JS END -->
+<script src="./js/all.js?5963"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
