--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?9470">
+	<link rel="stylesheet" type="text/css" href="./all.css?3407">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -85,7 +85,7 @@ $(function(){
 						<div class="collapse navbar-collapse navbar-45418  fullscreen-nav open-down">
 							<ul class="site-navigation nav navbar-nav ms-auto">
 								<li class="nav-item kcp-navbar-menu">
-									<a href="/kcp/main" class="nav-link float-lg-end">Documentation</a>
+									<a href="https://docs.kcp.io/kcp/main" class="nav-link float-lg-end">Documentation</a>
 								</li>
 								<li class="nav-item kcp-navbar-menu">
 									<a href="/blog" class="nav-link">Blog</a>
@@ -124,7 +124,7 @@ $(function(){
 	</div>
 	<div class="container -sm bloc-md-sm -md">
 		<div class="row row-margin-bottom">
-			<div class="text-center text-lg-center text-md-center col-md-10 offset-md-1 offset-lg-0 col-lg-12 ">
+			<div class="text-center text-lg-center text-md-center col-md-10 offset-md-1 offset-lg-0 col-lg-12">
 				<img src="img/blue-green-glow.png" class="img-fluid mx-auto d-block img-style" alt="blue green" />
 				<h1 class="mg-md text-center btn-resize-mode h1-style tc-white">
 					<strong>kcp</strong> –&nbsp;Simplifying building massively multi-tenant services. Together.
@@ -136,7 +136,7 @@ $(function(){
 <!-- hero END -->
 
 <!-- bloc-3 -->
-<div class="bloc tc-outer-space l-bloc" id="bloc-3">
+<div class="bloc tc-outer-space l-bloc " id="bloc-3">
 	<div class="container bloc-md-lg">
 		<div class="row">
 			<div class="col">
@@ -410,7 +410,7 @@ $(function(){
 					</h4>
 				<div class="text-lg-center text-center kcp-connect-div">
 						<div class="kcp-connect-lists">
-							<a href="github.com/kcp-dev/kcp"><span class="fab fa-github float-lg-none kcp-connect-icon icon-md"></span></a>
+							<a href="https://github.com/kcp-dev/kcp"><span class="fab fa-github float-lg-none kcp-connect-icon icon-md"></span></a>
 						</div>
 						<div class="kcp-connect-lists">
 							<a href="https://twitter.com/kcp"><span class="fab fa-twitter kcp-connect-icon icon-md"></span></a>
@@ -443,7 +443,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?5963"></script><!-- Additional JS END -->
+<script src="./js/all.js?8871"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
