--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?3407">
+	<link rel="stylesheet" type="text/css" href="./all.css?7311">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -136,7 +136,7 @@ $(function(){
 <!-- hero END -->
 
 <!-- bloc-3 -->
-<div class="bloc tc-outer-space l-bloc " id="bloc-3">
+<div class="bloc tc-outer-space l-bloc" id="bloc-3">
 	<div class="container bloc-md-lg">
 		<div class="row">
 			<div class="col">
@@ -220,7 +220,7 @@ $(function(){
 		</div>
 		<div class="row">
 			<div class="col freedom-time-cotent scroll-fx-in-fade order-2 order-sm-0">
-				<img src="img/multitenancy.png" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
+				<img src="img/multi-tenancy.svg" class="img-fluid mx-auto d-block mg-md img-multi-tenan-style" alt="multi tenancy" />
 				<h5 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 					kcp implements fully-isolated workspaces, each acting as its own Kubernetes-like cluster, with its own URL, its own set of APIs (e.g. different CRDs), its own RBAC, but as cheap and quick as a namespace
 				</h5>
@@ -263,7 +263,7 @@ $(function(){
 			</div>
 			<div class="col freedom-time-cotent scroll-fx-in-fade">
 					<div class="text-lg-start">
-						<a href="#" data-bs-toggle="modal" data-bs-target="#asciinema-apis-as-a-service" id="asciinemo-apis-as-a-service"><img src="img/apiservice.png" class="img-fluid mx-auto d-block mg-md" alt="notebook" /></a>
+						<a href="#" data-bs-toggle="modal" data-bs-target="#asciinema-apis-as-a-service" id="asciinemo-apis-as-a-service"><img src="img/api-service.svg" class="img-fluid mx-auto d-block mg-md" alt="api service" /></a>
 					</div>
 					<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 						kcp extends Kube&rsquo;s CRD extension model to an API export mechanism optimized for SaaS service providers offering APIs to thousands or many tens of thousands of user workspaces. Securely and efficiently.
@@ -272,7 +272,7 @@ $(function(){
 		</div>
 		<div class="row">
 				<div class="col freedom-time-cotent scroll-fx-in-fade order-2 order-sm-0">
-					<img src="img/kcp-kube-love.svg" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
+					<img src="img/walled-garden.svg" class="img-fluid mx-auto d-block mg-md" alt="walled garden" />
 					<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 						kcp does not replace Kubernetes, but complements it.<br><br>As a global control plane to inter-connect Kubernetes clusters.<br> <br>As a backend to host Kubernetes APIs as SaaS to any Kubernetes on any platform and any cloud provider, natively.<br><br>
 					</h4>
@@ -304,7 +304,7 @@ $(function(){
 					</div>
 				</div>
 				<div class="col freedom-time-cotent scroll-fx-in-fade">
-					<img src="img/horizontally%20scalable.svg" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
+					<img src="img/scaling.svg" class="img-fluid mx-auto d-block mg-md " alt="scaling" />
 					<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 						kcp schedules workspaces to shared apiservers (the shards), similarly to pods scheduled to nodes and containers on a node sharing a Linux kernel. Our ambitions are to eventually reach 1 million workspaces and 10,000 shards.<br>
 					</h4>
@@ -312,7 +312,7 @@ $(function(){
 			</div>
 		<div class="row">
 				<div class="col freedom-time-cotent scroll-fx-in-fade order-2 order-sm-0">
-					<img src="img/compute.png" class="img-fluid mx-auto d-block mg-md" alt="coffee%20banner" />
+					<img src="img/pods.svg" class="img-fluid mx-auto d-block mg-md img-13-style" alt="pods" />
 					<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style h5-style-last">
 						kcp intentionally only knows generic APIs, no pods or related resources. Transparent-multi-cluster is a kcp sub-project to re-add many of Kube&rsquo;s workload APIs, but reshaped to offer shared compute capacity making users forget about clusters and nodes.
 					</h4>
@@ -443,7 +443,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?8871"></script><!-- Additional JS END -->
+<script src="./js/all.js?7240"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
