Update community meeting time and tmc text

--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="https://kcp.io/img/shida-social-card.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./all.css?7311">
+	<link rel="stylesheet" type="text/css" href="./all.css?6922">
 	
     <title>kcp – Simplifying building massively multi-tenant services. Together.</title>
 <link rel="apple-touch-icon" href="/favicons/apple-touch-icon-180x180.png" sizes="180x180">
@@ -304,7 +304,7 @@ $(function(){
 					</div>
 				</div>
 				<div class="col freedom-time-cotent scroll-fx-in-fade">
-					<img src="img/scaling.svg" class="img-fluid mx-auto d-block mg-md " alt="scaling" />
+					<img src="img/scaling.svg" class="img-fluid mx-auto d-block mg-md" alt="scaling" />
 					<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style">
 						kcp schedules workspaces to shared apiservers (the shards), similarly to pods scheduled to nodes and containers on a node sharing a Linux kernel. Our ambitions are to eventually reach 1 million workspaces and 10,000 shards.<br>
 					</h4>
@@ -314,7 +314,7 @@ $(function(){
 				<div class="col freedom-time-cotent scroll-fx-in-fade order-2 order-sm-0">
 					<img src="img/pods.svg" class="img-fluid mx-auto d-block mg-md img-13-style" alt="pods" />
 					<h4 class="tc-onyx mg-lg mg-clear-sm text-center h5-style h5-style-last">
-						kcp intentionally only knows generic APIs, no pods or related resources. Transparent-multi-cluster is a kcp sub-project to re-add many of Kube&rsquo;s workload APIs, but reshaped to offer shared compute capacity making users forget about clusters and nodes.
+						kcp intentionally only knows generic APIs, no pods or related resources. Transparent-multi-cluster is an experimental kcp add-on to re-add some of Kube&rsquo;s workload APIs, but reshaped to offer shared compute capacity making users forget about clusters and nodes.
 					</h4>
 				</div>
 				<div class="text-lg-center col-1 order-md-0 col-lg-1 d-sm-block d-none">
@@ -373,7 +373,7 @@ $(function(){
 					
 				</div>
 				<h5 class="text-center mg-md tc-onyx-2 kcp-contribute-text-bottom">
-						We have a weekly <span class="kcp-community-meeting">community meeting: every Tuesday 11am EST</span>. Join us live! The <a class="ltc-azure" href="https://github.com/kcp-dev/kcp/issues?q=is%3Aopen+is%3Aissue+label%3Acommunity-meeting">agenda is available as Github issue</a> shortly before the meeting. See the <a class="ltc-azure" href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q">recordings on Youtube</a>.
+						We have a weekly <span class="kcp-community-meeting">community meeting: every Thursday 11am EST</span>. Join us live! The <a class="ltc-azure" href="https://github.com/kcp-dev/kcp/issues?q=is%3Aopen+is%3Aissue+label%3Acommunity-meeting">agenda is available as Github issue</a> shortly before the meeting. See the <a class="ltc-azure" href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q">recordings on Youtube</a>.
 					</h5>
 			</div>
 		</div>
@@ -387,7 +387,7 @@ $(function(){
 
 
 <!-- bloc-7 -->
-<div class="bloc bgc-black-2 d-bloc" id="bloc-7">
+<div class="bloc bgc-black-2 d-bloc " id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-md-3 col-sm-6 offset-lg-2 col-lg-4 text-lg-start">
@@ -395,7 +395,7 @@ $(function(){
 					About
 				</h4>
 				<p class="text-center mg-clear text-lg-center">
-					Copyright © 2022 <a class="ltc-white" href="https://github.com/kcp-dev/kcp" target="_blank">The KCP Authors</a>
+					Copyright © 2022-2023&nbsp;<a class="ltc-white" href="https://github.com/kcp-dev/kcp" target="_blank">The KCP Authors</a>
 				</p>
 				<p class="p-padding-top text-lg-center">
 					<a class="ltc-white-2" href="https://kubernetes.io">Kubernetes</a> and the Kubernetes logo are registered trademarks of The Linux Foundation.
@@ -443,7 +443,7 @@ $(function(){
 
 
 <!-- Additional JS -->
-<script src="./js/all.js?7240"></script><!-- Additional JS END -->
+<script src="./js/all.js?2605"></script><!-- Additional JS END -->
 <script>
 $('.freedom-more-button').on('click', function(){ $('body').toggleClass('freedom-no-scroll');
 });
