Revert "Update community meeting time"

--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -373,7 +373,7 @@ $(function(){
 					
 				</div>
 				<h5 class="text-center mg-md tc-onyx-2 kcp-contribute-text-bottom">
-						We have a weekly <span class="kcp-community-meeting">community meeting: every other Thursday 11am EST</span>. Join us live! The <a class="ltc-azure" href="https://github.com/kcp-dev/kcp/issues?q=is%3Aopen+is%3Aissue+label%3Acommunity-meeting">agenda is available as Github issue</a> shortly before the meeting. See the <a class="ltc-azure" href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q">recordings on Youtube</a>.
+						We have a weekly <span class="kcp-community-meeting">community meeting: every Tuesday 11am EST</span>. Join us live! The <a class="ltc-azure" href="https://github.com/kcp-dev/kcp/issues?q=is%3Aopen+is%3Aissue+label%3Acommunity-meeting">agenda is available as Github issue</a> shortly before the meeting. See the <a class="ltc-azure" href="https://www.youtube.com/channel/UCfP_yS5uYix0ppSbm2ltS5Q">recordings on Youtube</a>.
 					</h5>
 			</div>
 		</div>
